# Proyecto_Cortana_Jarvi_Educacion

./: .gitignore  README.md  checklist.md  memory.json  memory.md  test-supabase.html
Agente Educador/: .dockerignore  .editorconfig  .env.example  .eslintrc.json  .gitattributes  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CORTANA.md  Informacion del Proyecto.txt  LICENSE  README.md  check_mongodb.py  checklist.md  commitlint.config.js  create_folders.ps1  docker-compose.yml  init-dev.ps1  init_dev_env.ps1  init_dev_env.sh  lint-staged.config.js  list_routes.py  memory.json  memory.md  pyproject.toml  requirements_backend.txt  resumen.md  start-dev.js  test_register.py  vscode-settings.json
Agente Educador/.github/workflows/: ci.yml
Agente Educador/.husky/: commit-msg  pre-commit
Agente Educador/Prueba_endpoint/: endpoint_login.md
Agente Educador/backend/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  MEMORY.md  RESUMEN.md  check_admin_password.py  check_config.py  check_db.py  config.py  create_admin.py  debug_auth.py  init_db.ps1  list_routes.py  list_users.py  list_users_script.py  list_users_simple.py  login_user.json  main.py  memory.json  pyproject.toml  pytest.ini  register_user.json  requirements-dev.txt  requirements.txt  requirements_core.txt  run_server.py  setup.cfg  setup_env.ps1  setup_env.py  setup_mongodb.py  setup_mongodb_local.ps1  start.ps1  start_server.bat  start_server_fixed.py  temp_env.txt  test_auth.py  test_connection_fixed.py  test_direct_connection.py  (+14 more)
Agente Educador/backend/Prueba_endpoint/: endpoint_obtener_informacion_actual_actual.md  endpoint_obtener_token_acceso.md  endpoint_obtener_usuario_actual.md  endpoint_registro_usuario.md
Agente Educador/backend/app/: main.py
Agente Educador/backend/app/core/: auth.py  config.py  config.py.backup  logging_config.py  security.py
Agente Educador/backend/app/db/: __init__.py  init_db.py  mongodb.py  utils.py
Agente Educador/backend/app/models/: chat.py  chat_models.py  token.py  user.py
Agente Educador/backend/app/repositories/: token_repository.py  user_repository.py
Agente Educador/backend/app/services/: chat_service.py
Agente Educador/backend/tests/: test_auth_flow.py  test_users.py
Agente Educador/frontend/: .env.example  .eslintrc.cjs  .eslintrc.js  .eslintrc.json  .prettierrc  .stylelintrc.json  Dockerfile  babel.config.js  env.example  index.html  jest.config.ts  jest.setup.js  jest.setup.ts  nginx.conf  package-lock.json  package.json  start-vite.bat  start.bat  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite-env.d.ts  vite.config.js  vite.config.ts
Agente Educador/frontend/css/: styles.css
Agente Educador/frontend/js/: app.js  config.js
Agente Educador/frontend/scripts/: download-images.js
Agente Educador/frontend/src/: App.tsx  index.css  main.jsx  main.tsx  routes.tsx  setupTests.ts  theme.ts  vite-env.d.ts
Agente Educador/frontend/src/components/: DebugAuth.tsx  Footer.tsx  Navbar.tsx  (+2 more)
Agente Educador/nodejs-backend/: server.js
Agente Educador/registro_Diarios/: Registro.md
Agente Educador/supabase/: DATABASE.md  migrate.js
Agente Educador/supabase/migrations/: 20240630_initial_schema.sql  20240630_security_policies.sql  20240703_fix_user_registration.sql
(+117 files in other folders)
